Bug 1912996 - Make sure to honor the sheet clone parent. r=firefox-style-system-reviewers,zrhoffman

We've never passed it down even though it was clearly the intention.

This made the invalidation code think the stylesheet was already
detached.

Differential Revision: https://phabricator.services.mozilla.com/D219638