layout/style/GeckoBindings.cpp
@@ -421,7 +421,8 @@ StyleSheet* Gecko_StyleSheet_Clone(const StyleSheet* aSheet,
   MOZ_ASSERT(aSheet->GetParentSheet(), "Should only be used for @import");
   MOZ_ASSERT(aNewParentSheet, "Wat");
 
-  RefPtr<StyleSheet> newSheet = aSheet->Clone(nullptr, nullptr);
+  RefPtr<StyleSheet> newSheet =
+      aSheet->Clone(const_cast<StyleSheet*>(aNewParentSheet), nullptr);
 
   // NOTE(emilio): This code runs in the StylesheetInner constructor, which
   // means that the inner pointer of `aNewParentSheet` still points to the old
